--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 <h1>Hello {{ name }}!</h1>
 <form action="{{ url_for('addRegion') }}" method="post">
     <input type="text" name="username"><br>
-    <input type="email" name="email">
+    <input type="email" name="email"><br>
+    <input type="text" name="year"><br>
     <input type="submit" value="Submit">
 </form>
 
