--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Hello {{ name }}!</h1>
 <form action="{{ url_for('addRegion') }}" method="post">
-    <input type="text" name="username"><br>
-    <input type="email" name="email"><br>
-    <input type="text" name="year"><br>
+    <input type="text" name="username" placeholder="username"><br>
+    <input type="email" name="email" placeholder="email"><br>
+    <input type="text" name="year" placeholder="year"><br>
     <input type="submit" value="Submit">
 </form>
 
