--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,17 @@
 
 </head>
 <body>
+<h1>Home Page</h1>
 <h1>Hello {{ name }}!</h1>
-<form action="{{ url_for('addRegion') }}" method="post">
-    <input type="text" name="username"><br>
-    <input type="email" name="email"><br>
-    <input type="text" name="year"><br>
+<form action="{{ url_for('register') }}" method="post">
+    <input type="text" name="username" placeholder="username"><br>
+    <input type="email" name="email" placeholder="email"><br>
+    <input type="text" name="year" placeholder="year"><br>
     <input type="submit" value="Submit">
 </form>
+
+<A HREF="/login">LOGIN HERE</A>
+
 
 </body>
 </html>
