--- a/templates/login.html
+++ b/templates/login.html
@@ -47,9 +47,8 @@
 
 <body class="text-center">
 
-<h2>{{ name }}!</h2>
-
   <form action="{{ url_for('login') }}" method="post" class="form-signin">
+     <h1 class="h3 mb-3 font-weight-normal">{{name}}</h1>
     <img class="mb-4" src="{{url_for('static', filename='images/X.png')}}" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">ProjectX Login</h1>
 
