--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Jekyll v4.1.1">
-  <title>Signin Template · Bootstrap</title>
+  <title>Project X</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
 
@@ -51,12 +51,24 @@
     <h1 class="h3 mb-3 font-weight-normal">ProjectX Signup</h1>
     <label for="inputEmail" class="sr-only">Signup to My Newsletter</label>
 
-    <input type="text" name="username" class="form-control top" placeholder="First Name" required autofocus>
-    <input type="email" name="email"class="form-control middle" placeholder="Email" required>
-    <input type="text" name="year" class="form-control bottom" placeholder="School Year" required>
+    <input type="text" name="firstName" class="form-control top" placeholder="First Name" required autofocus>
+    <input type="text" name="lastName" class="form-control top" placeholder="Last Name" required autofocus>
+    <input type="text" name="username" class="form-control top" placeholder="Username" required autofocus>
+    <input type="email" name="email" class="form-control middle" placeholder="Email" required>
+    <input type="number" name="age" class="form-control middle" placeholder="Age" min="17" max="28" required>
+
+    <select id="year" name="year">
+      <option value="Freshman">Freshman</option>
+      <option value="Sophmore">Sophmore</option>
+      <option value="Junior" selected>Junior</option>
+      <option value="Senior">Senior</option>
+    </select>
+
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Me Up</button>
     <p class="mt-5 mb-3 text-muted">Made by Akash & Scotty</p>
   </form>
+    <a href="login"><button class="btn btn-lg btn-primary btn-block">Go To Login</button></a>
+
 </body>
 
 </html>
