--- a/templates/index.html
+++ b/templates/index.html
@@ -57,17 +57,23 @@
     <input type="email" name="email" class="form-control middle" placeholder="Email" required>
     <input type="number" name="age" class="form-control middle" placeholder="Age" min="17" max="28" required>
 
-    <select id="year" name="year">
+    <select id="year" name="year" class="form-control">
+      <option value="null">Select Year</option>
       <option value="Freshman">Freshman</option>
       <option value="Sophmore">Sophmore</option>
-      <option value="Junior" selected>Junior</option>
+      <option value="Junior" >Junior</option>
       <option value="Senior">Senior</option>
     </select>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Me Up</button>
     <p class="mt-5 mb-3 text-muted">Made by Akash & Scotty</p>
+    <div class="login-button">
+      <a style="font-size:2rem" href="login">Go to Login</a>
+    </div>
   </form>
-    <a href="login"><button class="btn btn-lg btn-primary btn-block">Go To Login</button></a>
+    <ul>
+
+    </ul>
 
 </body>
 
