--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,17 +13,17 @@
 
     <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="">ProjectX</a>
+        <a class="navbar-brand" href="/">ProjectX</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/profile">Profile</a>
+              <a class="nav-link" href="/profilePage">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Match</a>
+              <a class="nav-link" href="/matchPage">Match</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#skills">About</a>
