--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,33 +40,17 @@
     <h1>Welcome, {{name}} {{last}}</h1>
     <p>{{year}}</p>
 
-    <button class="open-button" onclick="openForm()">Open Form</button>
-
-    <div class="form-popup" id="myForm">
-      <form action="{{ url_for('profile') }}" class="form-container">
-        <h1>Login</h1>
-
-        <label for="firstName"><b>First Name</b></label>
-        <input type="text" placeholder="{{name}}" name="firstName" required>
-        <br>
-        <label for="lastName"><b>Last Name</b></label>
-        <input type="text" placeholder="{{last}}" name="lastName" required>
-        <br>
-<!--         <select id="year" name="year">-->
-<!--          <option value="{{year}}">{{year}}</option>-->
-<!--          <option value="Freshman">Freshman</option>-->
-<!--          <option value="Sophmore">Sophmore</option>-->
-<!--          <option value="Junior" >Junior</option>-->
-<!--          <option value="Senior">Senior</option>-->
-<!--         </select>-->
-<!--        <br>-->
-
-        <button type="submit" class="btn">Submit Changes</button><br>
-        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-      </form>
-    </div>
-
   </div>
+    <body class="text-center">
+  <form action="{{ url_for('profile') }}" method="post" class="form-signin">
+
+    <input type="text" name="firstName" class="form-control top" placeholder="{{name}}" required autofocus>
+    <input type="text" name="lastName" class="form-control top" placeholder="{{last}}" required autofocus>
+
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Make Changes</button>
+    <div class="login-button">
+    </div>
+  </form>
 
   <script>
     function openForm() {
